--- a/WeatherForecast/index.html
+++ b/WeatherForecast/index.html
@@ -6,6 +6,7 @@
     <title>Weather Forecast</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="img/weather-cloud.png" >
     <script src="https://kit.fontawesome.com/96b6148f8e.js" crossorigin="anonymous"></script>
 </head>
 <body>
